Show parsed commands from Dockerfile

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,5 +1,7 @@
-FROM alpine:latest
+FROM alpine:latest as foo
 WORKDIR /app
 COPY example.sh /bin
 ENTRYPOINT ["/bin/example.sh"]
 
+FROM foo
+LABEL foo=bar
