Add minimal manifest modification commands

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -2,6 +2,7 @@ FROM alpine:latest as foo
 WORKDIR /app
 COPY example.sh /bin
 ENTRYPOINT ["/bin/example.sh"]
+ENV EXAMPLE="Some data"
 
 FROM foo
 LABEL foo=bar
